--- a/index.html
+++ b/index.html
@@ -2,11 +2,150 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>город Седона</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/index-logo.svg" width="115" height="55" alt="Логотип города Седона">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="photos_and_videos.html">Фото и видео</a></li>
+          <li><a href="state-map">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>          
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+       <section class="introduction">
+          <h2 class="visually-hidden">Седона</h2>
+          <img src="img/introduction-welcome.png" width="150" height="35" alt="Welcome">
+          <img src="img/introduction-gorgeous.png" width="205" height="25" alt="to the gorgeous">
+          <img src="img/introduction-sedona.png" width="360" height="60" alt="Sedona">
+          <img src="img/introduction-because.png" width="235" height="60" alt="Because the Grand Canyon sucks">
+       </section>
+       <section class="features">
+            <div class="features-head">
+               <h1>Седона - небольшой городок в Аризоне,<br>
+               заслуживающий большего!</h1>
+               <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+            </div>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+            <div class="features-items">
+               <div class="item-title features-blue">
+                   <h2>Настоящий городок</h2>
+                   <p>- №1 -</p> <!-- может &ndash; или &mdash; ?-->
+                   <p>Седона - не аттракцион для туристов,<br> 
+                   там течет своя жизнь</p>           
+               </div>
 
+               <div clas="features-items-img features-blue">
+                   <img src="img/features-true_city.png" width="625" height="201" alt="Настоящий городок">    	
+               </div>
+           </div>
+
+           <div class="features-items">
+               <div class="item-title features-white">
+                   <img src="#">
+                   <h2>Жилье</h2>
+                   <p>Рекомендуем пожить в настоящем <br>
+                   мотеле,все как в кино!</p>
+               </div>
+
+               <div class="item-title features-white">
+                   <img src="#">
+                   <h2>Еда</h2>
+                   <p>Всегда заказывайте фирменный бургер,<br>
+                   вы не разочаруетесь!</p>
+               </div>
+
+               <div class="item-title features-white">
+                   <img src="#">
+                   <h2>Сувениры</h2>
+                   <p>Не только китайского, но и местного<br>
+                   производства!</p>
+               </div>
+           </div>
+
+           <div class="features-items">
+               <div class="features-items-img features-blue">            
+                   <img src="img/features-devils_bridge.png" width="625" height="201" alt="Мост дьявола">                
+               </div>
+           
+               <div clas="item-title features-blue">                
+                   <h2>Там есть мост дьявола</h2>
+                   <p>- №2 -</p> 
+                   <p>Да, но по нему можно пройти!Если конечно<br>
+                   вы осмелитесь</p>           
+               </div>
+           </div>
+
+           <div class="features-items">
+                <div class="item-title features-grey">
+                   <h2>Небольшая площадь</h2>
+                   <p>- №3 -</p> 
+                   <p>Все достопримечательности<br>
+                   находятся очень близко</p>
+                </div>
+
+                <div class="item-title features-grey">
+                   <h2>Красивая дорога</h2>
+                   <p>- №4 -</p> 
+                   <p>Ехать в Седону из Лас-Вегаса совсем<br>
+                    не скучно</p>
+                </div>
+
+                <div class="item-title features-grey">
+                   <h2>Мало туристов</h2>
+                   <p>- №5 -</p> 
+                   <p>Большинство едет в Гранд Каньон и<br>
+                   толпится там</p>
+                </div>
+           </div>
+       </section>
+
+       <section class="hotel-search">
+           <h2>Заинтересовались?</h2>
+           <p> Укажите предполагемые даты поездки,<br>
+            и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+
+           <fieldset>
+               <legend>Поиск гостиницы в Седоне</legend>
+                   <form action="https://echo.htmlacademy.ru" method="post">
+                      <label for="arrival_date">Дата въезда</label>
+                      <input type="text" id="arrival_date" name="arrival_date" pattern="[0-9]{2}-[0-9]{2}-[0-9]{4}" placeholder="В формате дд-мм-гггг" required value="24 апреля 2016">
+                      <br>          
+
+                      <label for="depart-date">Дата выезда</label>
+                      <input type="text" name="depart-date" id="depart-date" pattern="[0-9]{2}-[0-9]{2}-[0-9]{4}" placeholder="В формате дд-мм-гггг" required value="4 июля 2016">
+                      <br>
+                      <input type="submit" value="Найти">
+                   </form>
+           </fieldset>
+       </section>
+
+       <section class="map">
+            <iframe src="https://www.google.com/maps/place/34%C2%B051'36.0%22N+111%C2%B047'21.0%22W/@34.86,-111.78917,12z/data=!4m5!3m4!1s0x0:0x0!8m2!3d34.86!4d-111.78917?hl=ru" name="map" width="" height=""></iframe>    	
+       </section>
+    </main>
+
+    <footer class="main-footer">
+       <p class="footer-tag">
+        #visitsedona
+       </p>
+        <div class="footer-social">        
+          <ul>
+            <li><a class="social-button" href="#">Twitter</a></li>
+            <li><a class="social-button" href="#">Facebook</a></li>
+            <li><a class="social-button" href="#">Youtube</a></li>
+          </ul>
+       </div>
+       <p class="footer-copyright">
+        Website by        
+        <a class="button" href="https://htmlacademy.ru"><img src="img/footer-studio.png"></a>
+       </p>
+    </footer>
   </body>
-</html>
+</html>  
