--- a/index.html
+++ b/index.html
@@ -132,20 +132,18 @@
     </main>
 
     <footer class="main-footer">
-       <p class="footer-tag">
-        #visitsedona
-       </p>
-        <div class="footer-social">        
-          <ul>
-            <li><a class="social-button" href="#">Twitter</a></li>
-            <li><a class="social-button" href="#">Facebook</a></li>
-            <li><a class="social-button" href="#">Youtube</a></li>
-          </ul>
-       </div>
-       <p class="footer-copyright">
-        Website by        
-        <a class="button" href="https://htmlacademy.ru"><img src="img/footer-studio.png"></a>
-       </p>
+       <div class="footer-tag">#visitsedona</div>
+         <div class="footer-social">        
+           <ul>
+             <li><a class="social-button" href="#">Twitter</a></li>
+             <li><a class="social-button" href="#">Facebook</a></li>
+             <li><a class="social-button" href="#">Youtube</a></li>
+           </ul>
+         </div>
+         <div class="footer-copyright">
+             Website by        
+            <a class="button" href="https://htmlacademy.ru"><img src="img/footer-studio.png"></a>
+         </div>
     </footer>
   </body>
 </html>  
