--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>город Седона</title>
+  <head>   
+    <meta charset="utf-8">    
+      <title>Седона</title> 
+        <link href="css/style.css" rel="stylesheet">     
   </head>
   <body>
    <div class="container">
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="115" height="55" alt="Логотип города Седона">
+          <img src="img/logo.svg" width="115" height="55" alt="Логотип города Седона">
         </a>
         <ul class="site-navigation">
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="photos_and_videos.html">Фото и видео</a></li>
-          <li><a href="state-map">Карта штата</a></li>
-          <li><a href="hotels.html">Гостиницы</a></li>          
+          <li><a href="info.html"><img src="img/info.png"></a></li>
+          <li><a href="photos_and_videos.html"><img src="img/photos & videos.png"></a></li>
+          <li><a href="state-map"><img src="img/map.png"></a></li>
+          <li><a href="hotels.html"><img src="img/hotels.png"></a></li>          
         </ul>
       </nav>
     </header>
     <main>
-       <section class="introduction">
-          <h2 class="visually-hidden">Седона</h2>
-          <img src="img/introduction-welcome.png" width="940" height="400" alt="Welcome">          
+       <section class="intro">
+          <!--<h2 class="visually-hidden">Седона</h2>-->
+          <img src="img/intro.png" width="1200" height="780" alt="Welcome">          
        </section>
        <section class="features">
-            <div class="features-head">
+            <div class="features-head">               
                <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
                <span class="secondary-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</span>
             </div>
@@ -38,25 +39,25 @@
                </div>
 
                <div clas="features-items-img features-blue">
-                   <img src="img/features-true_city.png" width="625" height="201" alt="Настоящий городок">    	
+                   <img src="img/true-city.png" width="800" height="256" alt="Настоящий городок">    	
                </div>
            </div>
 
            <div class="features-items">
                <div class="item-title features-white">
-                   <img src="#">
+                   <img src="img/icon-house.svg">
                    <h2>Жилье</h2>
                    <span class="secondary-text">Рекомендуем пожить в настоящем мотеле,все как в кино!</span>
                </div>
 
                <div class="item-title features-white">
-                   <img src="#">
+                   <img src="img/icon-burger.svg">
                    <h2>Еда</h2>
                    <span class="secondary-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</span>
                </div>
 
                <div class="item-title features-white">
-                   <img src="#">
+                   <img src="img/icon-souvenir.svg">
                    <h2>Сувениры</h2>
                    <span class="secondary-text">Не только китайского, но и местного производства!</span>
                </div>
@@ -64,7 +65,7 @@
 
            <div class="features-items">
                <div class="features-items-img features-blue">            
-                   <img src="img/features-devils_bridge.png" width="625" height="201" alt="Мост дьявола">                
+                   <img src="img/devils-bridge.png" width="800" height="256" alt="Мост дьявола">                
                </div>
            
                <div clas="item-title features-blue">                
@@ -113,7 +114,7 @@
        </section>
 
        <section class="map">
-            <iframe src="https://www.google.com/maps/place/34%C2%B051'36.0%22N+111%C2%B047'21.0%22W/@34.86,-111.78917,12z/data=!4m5!3m4!1s0x0:0x0!8m2!3d34.86!4d-111.78917?hl=ru" name="map" width="" height=""></iframe>    	
+            <iframe src="https://www.google.com/maps/place/34%C2%B051'36.0%22N+111%C2%B047'21.0%22W/@34.86,-111.78917,12z/data=!4m5!3m4!1s0x0:0x0!8m2!3d34.86!4d-111.78917?hl=ru" name="map" width="1200" height="593"></iframe>    	
        </section>
     </main>
 
@@ -121,14 +122,14 @@
        <div class="footer-tag">#visitsedona</div>
          <div class="footer-social">        
            <ul>
-             <li><a class="social-button" href="#">Twitter</a></li>
-             <li><a class="social-button" href="#">Facebook</a></li>
-             <li><a class="social-button" href="#">Youtube</a></li>
+             <li><a class="social-button" href="#"><img src="img/twitter.svg"></a></li>
+             <li><a class="social-button" href="#"><img src="img/fb.svg"></a></li>
+             <li><a class="social-button" href="#"><img src="img/youtube.svg"></a></li>
            </ul>
          </div>
          <div class="footer-copyright">
              <span class="secondary-text">Website by</span>        
-             <a class="button" href="https://htmlacademy.ru"><img src="img/footer-studio.png"></a>
+             <a class="button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg"></a>
          </div>
     </footer>
    </div>
